# 3D_Playground

./: CMakeLists.txt  README.md  imgui.ini
res/models/frog/: scene.gltf
res/shaders/: Basic.shader  Basic.vs  Cube.fs  Cube.vs  Flashlight.fs  Light.fs  Light.shader  Light.vs  Model.fs
src/: Camera.h  GLDebug.cpp  GLDebug.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.h  Texture.cpp  Texture.h  application.cpp  application.h  shapes.h
src/logger/: Logger.cpp  Logger.h
